--- a/playwright/.gitignore
+++ b/playwright/.gitignore
@@ -4,5 +4,6 @@ node_modules/
 /test-results/
 /playwright-report/
 /blob-report/
-/playwright/.cache/
-/playwright/.auth/
+/.cache/
+/.auth/*.json
+
