--- a/playwright/.gitignore
+++ b/playwright/.gitignore
@@ -1,9 +1,12 @@
 
-# Playwright
 node_modules/
+
+# Playwright
 /test-results/
 /playwright-report/
 /blob-report/
 /.cache/
 /.auth/*.json
 
+# Secrets
+.env
