--- a/playwright/package.json
+++ b/playwright/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:e2e": "npx playwright test",
+    "test:e2e": "npx playwright test --config config/playwright.config.ts",
     "test:e2e:ui": "npm run test:e2e -- --ui",
     "test:e2e:debug": "npm run test:e2e -- --debug"
   },
