ci: PW-4 move package.json to workspaces approach

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "testing-portfolio",
+  "workspaces": [
+    "playwright"
+  ],
   "dependencies": {
     "@types/node": "^25.2.0"
   },
