--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "workspaces": [
     "playwright"
   ],
+  "scripts": {
+    "test:pw": "npm run test:pw -w playwright",
+    "test:pw:ui": "npm run test:pw:ui -w playwright",
+    "test:pw:debug": "npm run test:pw:debug -w playwright"
+  },
   "dependencies": {
     "@types/node": "^25.2.0"
   },
