--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,5 +30,5 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
-          path: reports/
+          path: playwright/reports/
           retention-days: 30
