--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,7 +8,6 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
@@ -24,6 +23,7 @@ jobs:
           PROBLEM_USER: ${{ secrets.PROBLEM_USER }}
           ERROR_USER: ${{ secrets.ERROR_USER }}
           VISUAL_USER: ${{ secrets.VISUAL_USER }}
+          LOCKED_USER: ${{ secrets.LOCKED_USER }}
           PASSWORD: ${{ secrets.PASSWORD }}
         run: npm run test:pw
       - uses: actions/upload-artifact@v4
