--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,8 +15,9 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+      - name: Install Playwright Browsers (Chromium only)
+        # This line is changed to install only 'chromium'
+        run: npx playwright install chromium --with-deps
       - name: Run Playwright tests
         env:
           STANDARD_USER: ${{ secrets.STANDARD_USER }}
