--- a/playwright/.gitignore
+++ b/playwright/.gitignore
@@ -1,13 +1,8 @@
 
-node_modules/
-
 # Playwright
 /reports/
 /test-results/
-/playwright-report/
-/blob-report/
-/.cache/
 /.auth/*.json
 
 # Secrets
-.env
+config/.env
