test(e2e): Cy-1 update package.jsons with scripts and add gitignore for cypress

--- a/cypress/package.json
+++ b/cypress/package.json
@@ -2,7 +2,10 @@
   "name": "cypress",
   "version": "1.0.0",
   "description": "Cypress e2e testing showcase.",
-  "scripts": {},
+  "scripts": {
+    "test:cy": "npx cypress",
+    "test:cy:ui": "npm run test:cy -- open"
+  },
   "author": "Lonnie Lund",
   "license": "MIT",
   "type": "module",
