--- a/cypress/package.json
+++ b/cypress/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
+    "@testing-library/cypress": "^10.1.0",
     "cypress": "^15.10.0"
   }
 }
