--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^25.2.0"
   },
   "devDependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "typescript": "^5.9.3"
   }
 }
