--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,13 +1,13 @@
-name: Run Playwright Tests
+name: Run Cypress Tests
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
 jobs:
-  test:
+  cypress-run:
     timeout-minutes: 15
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
@@ -15,10 +15,7 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Install Playwright Browsers (Chromium only)
-        # This line is changed to install only 'chromium'
-        run: npx playwright install chromium --with-deps
-      - name: Run Playwright tests
+      - name: Run Cypress tests
         env:
           STANDARD_USER: ${{ secrets.STANDARD_USER }}
           PROBLEM_USER: ${{ secrets.PROBLEM_USER }}
@@ -26,10 +23,6 @@ jobs:
           VISUAL_USER: ${{ secrets.VISUAL_USER }}
           LOCKED_USER: ${{ secrets.LOCKED_USER }}
           PASSWORD: ${{ secrets.PASSWORD }}
-        run: npm run test:pw
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+        uses: cypress-io/github-action@v6
         with:
-          name: playwright-report
-          path: playwright/reports/
-          retention-days: 30
+          browser: chrome
