--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,12 +9,8 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-node@v5
-        with:
-          node-version: lts/*
-      - name: Install dependencies
-        run: npm ci
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Run Cypress tests
         env:
           STANDARD_USER: ${{ secrets.STANDARD_USER }}
@@ -25,4 +21,6 @@ jobs:
           PASSWORD: ${{ secrets.PASSWORD }}
         uses: cypress-io/github-action@v6
         with:
+          build: npm run build
+          start: npm start
           browser: chrome
