--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: lts/*
       - name: Install dependenciess
         run: npm ci
-      - name: Run Playwright tests
+      - name: Run Cypress tests
         env:
           STANDARD_USER: ${{ secrets.STANDARD_USER }}
           PROBLEM_USER: ${{ secrets.PROBLEM_USER }}
@@ -24,14 +24,3 @@ jobs:
           LOCKED_USER: ${{ secrets.LOCKED_USER }}
           PASSWORD: ${{ secrets.PASSWORD }}
         run: npm run test:cy
-    #   - name: Checkout
-    #     uses: actions/checkout@v4
-    #   - name: Run Cypress tests
-    #     uses: cypress-io/github-action@v6
-    #     env:
-    #       STANDARD_USER: ${{ secrets.STANDARD_USER }}
-    #       PROBLEM_USER: ${{ secrets.PROBLEM_USER }}
-    #       ERROR_USER: ${{ secrets.ERROR_USER }}
-    #       VISUAL_USER: ${{ secrets.VISUAL_USER }}
-    #       LOCKED_USER: ${{ secrets.LOCKED_USER }}
-    #       PASSWORD: ${{ secrets.PASSWORD }}
