--- a/.github/actions/run-cypress/action.yml
+++ b/.github/actions/run-cypress/action.yml
@@ -6,7 +6,7 @@ runs:
     - uses: ./.github/actions/e2e-setup
     - name: Cypress run
       shell: bash
-      run: npx cypress run
+      run: npm run test:cy
     - name: Upload Artifacts
       if: failure()
       uses: actions/upload-artifact@v4
