--- a/.github/actions/run-playwright/action.yml
+++ b/.github/actions/run-playwright/action.yml
@@ -12,7 +12,7 @@ runs:
 
     - name: Playwright run
       shell: bash
-      run: npx playwright test
+      run: npm run test:pw
 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
